# ectar

./: .gitignore  BUGS.md  Cargo.toml  PLAN.md  README.md  TAPE_TESTING.md  test_tape_setup.sh  un-ec.py
ectar-test/: run-tests.sh
src/: error.rs  lib.rs  main.rs  utils.rs
src/archive/: create.rs  extract.rs  list.rs  mod.rs
src/checksum/: sha256.rs
src/chunking/: chunker.rs  compressed_chunker.rs  mod.rs  reassembler.rs  streaming_erasure_chunker.rs
src/cli/: create.rs  extract.rs  info.rs  list.rs  mod.rs  verify.rs
src/compression/: mod.rs  zstd.rs
src/erasure/: decoder.rs  encoder.rs  mod.rs  zfec_header.rs
src/index/: builder.rs  format.rs  mod.rs  reader.rs
src/io/: buffer.rs  mod.rs  rait.rs  shard_reader.rs  shard_writer.rs  streaming_shard_writer.rs  tape.rs  tape_reader.rs
src/metadata/: archive_info.rs  mod.rs
tests/: cli_binary_tests.rs  cli_tape_support.rs  mocks.rs  rait_shard_writer.rs  tape_shard_output.rs  tape_shard_reader.rs
tests/integration/: archive_tests.rs  cli_tests.rs  compression_tests.rs  corruption_tests.rs  error_tests.rs  extraction_tests.rs  filesystem_tests.rs  metadata_tests.rs  mod.rs  test_helpers.rs
