[package]
name = "ectar"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ectar contributors"]
description = "Erasure-coded tar archive utility for long-term data preservation"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Tar archive handling
tar = "0.4"

# Zstd compression
zstd = { version = "0.13", features = ["zstdmt"] }

# Reed-Solomon erasure coding
reed-solomon-erasure = "6.0"

# Checksumming
sha2 = "0.10"
digest = "0.10"

# Serialization for index
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress reporting
indicatif = "0.17"

# Logging
env_logger = "0.11"
log = "0.4"

# File walking
walkdir = "2.4"
glob = "0.3"

# Date/time for metadata
chrono = { version = "0.4", features = ["serde"] }

# Byte size formatting
bytesize = "1.3"

# CPU detection for multi-threading
num_cpus = "1.16"

# Temporary directories
tempfile = "3.10"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
